API Breakage cleanup naming conventions for create / update objects on comments and mapsets.  Update mapping APIs, in general, to accept Strings for incoming concepts (UUID, nid or sequence) and return an identified object that contains UUID nid and sequence.  See the changelog for more details.